--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.3",
         "hardevine/shoppingcart": "^3.4",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
