--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "doctrine/dbal": "^4.3",
         "hardevine/shoppingcart": "^3.4",
         "laravel-lang/common": "^6.7",
@@ -17,7 +18,8 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "rappasoft/laravel-livewire-tables": "^3.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
