--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:1dOFtxAmDJXHsIBCGK9WXzHIr5qXocKFVO38jeYybVI=
-APP_DEBUG=false
+APP_DEBUG=true
 
-# ===== NGROK + APACHE EN SUBCARPETA =====
-# ngrok levantado con: ngrok http 80
-# IMPORTANTE: incluye la subcarpeta de tu app
-APP_URL=https://1fb6b4fe57e8.ngrok-free.app/laravel/ecommerce/public
+# Usa HTTPS cuando trabajes con ngrok
+APP_URL=https://2b9526e8b8a7.ngrok-free.app/
+SESSION_SECURE_COOKIE=true
+ASSET_URL=${APP_URL}
+FILESYSTEM_DISK=public
+FILESYSTEM_URL=${APP_URL}/storage
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=es
 APP_FAKER_LOCALE=es_ES
+
 APP_MAINTENANCE_DRIVER=file
 
 # Seguridad y hashing
@@ -31,29 +34,26 @@ DB_DATABASE=ecommerce
 DB_USERNAME=root
 DB_PASSWORD=
 
-# Sesiones
+# Sesiones (puedes dejar SESSION_ENCRYPT=false en desarrollo y activarlo en producción)
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-# ===== Archivos / Storage =====
-FILESYSTEM_DISK=public
-FILESYSTEM_URL=${APP_URL}/storage
-ASSET_URL=${APP_URL}
-
-# Colas, caché
+# Colas, caché y almacenamiento
+BROADCAST_CONNECTION=log
 QUEUE_CONNECTION=database
 CACHE_STORE=database
 
-# Redis (si no usas, queda igual)
+# Memcached y Redis (puedes ignorarlos si no los usas)
+MEMCACHED_HOST=127.0.0.1
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# Correo (dummy en local)
+# Correo
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
@@ -62,16 +62,16 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-# AWS (si no usas, déjalo vacío)
+# AWS (ignora si no usas)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# Frontend (Vite)
+# Frontend (vite)
 VITE_APP_NAME="${APP_NAME}"
 
-# PAYPHONE API
+# 🔐 PAYPHONE API
 PAYPHONE_TOKEN=sn2fGFIP_O9KoiyQASWeJd_wroAtJPnFMkFYaUfZ_BoYCIYGdItd_2Zk9wVwq3NHAWo-lui-uiCd-X83e-8K0qRKZleJKLDuxBoqqSfliXx67HxP8DLMSofaQEcYf0jvr1RwZN-XxG7dPBcsgZvzu98SnrKomVjizCGswxclf8NX_qKfPhPfw7v3j5XHW3dW_m9nmrEchGONrSIOFI_qJCZ58rnOTU4eHeks56Hkrqrwl_SHNtYmZMUWQ4nbS6eAUNpuAPrtzDbZz6-Gj9uAgOnXcNTha9nE8wLEdYbmH6_S7Nqnu3ybnpMpSSltC3HciLNKw_etbzW1S4V0q-CvcQ7-bOk
 PAYPHONE_STORE_ID=6fdbd482-3f07-4c65-91ea-ca6fc197dc81
