--- a/.env.example
+++ b/.env.example
@@ -1,77 +1,1 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:1dOFtxAmDJXHsIBCGK9WXzHIr5qXocKFVO38jeYybVI=
-APP_DEBUG=true
-
-# Usa HTTPS cuando trabajes con ngrok
-APP_URL=https://acc8af0b7664.ngrok-free.app/
-SESSION_SECURE_COOKIE=true
-ASSET_URL=${APP_URL}
-FILESYSTEM_DISK=public
-FILESYSTEM_URL=${APP_URL}/storage
-
-APP_LOCALE=es
-APP_FALLBACK_LOCALE=es
-APP_FAKER_LOCALE=es_ES
-
-APP_MAINTENANCE_DRIVER=file
-
-# Seguridad y hashing
-PHP_CLI_SERVER_WORKERS=4
-BCRYPT_ROUNDS=12
-
-# Logs
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-# Base de datos
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=ecommerce
-DB_USERNAME=root
-DB_PASSWORD=
-
-# Sesiones (puedes dejar SESSION_ENCRYPT=false en desarrollo y activarlo en producción)
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-# Colas, caché y almacenamiento
-BROADCAST_CONNECTION=log
-QUEUE_CONNECTION=database
-CACHE_STORE=database
-
-# Memcached y Redis (puedes ignorarlos si no los usas)
-MEMCACHED_HOST=127.0.0.1
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-# Correo
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
-# AWS (ignora si no usas)
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-# Frontend (vite)
-VITE_APP_NAME="${APP_NAME}"
-
-# 🔐 PAYPHONE API
-PAYPHONE_TOKEN=sn2fGFIP_O9KoiyQASWeJd_wroAtJPnFMkFYaUfZ_BoYCIYGdItd_2Zk9wVwq3NHAWo-lui-uiCd-X83e-8K0qRKZleJKLDuxBoqqSfliXx67HxP8DLMSofaQEcYf0jvr1RwZN-XxG7dPBcsgZvzu98SnrKomVjizCGswxclf8NX_qKfPhPfw7v3j5XHW3dW_m9nmrEchGONrSIOFI_qJCZ58rnOTU4eHeks56Hkrqrwl_SHNtYmZMUWQ4nbS6eAUNpuAPrtzDbZz6-Gj9uAgOnXcNTha9nE8wLEdYbmH6_S7Nqnu3ybnpMpSSltC3HciLNKw_etbzW1S4V0q-CvcQ7-bOk
-PAYPHONE_STORE_ID=6fdbd482-3f07-4c65-91ea-ca6fc197dc81
+ssss
