--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "doctrine/dbal": "^4.3",
         "hardevine/shoppingcart": "^3.4",
+        "intervention/image": "^3.11",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
